--- a/templates/hk-tour.html
+++ b/templates/hk-tour.html
@@ -162,79 +162,79 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-buthersbridge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ljubljana Buther Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-Cobblers-Bridge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Cobbler Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-dragon-bridge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ejderha Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-kongremeydani.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kongre Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-metelkovagrafiksanat.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Metelkova Grafik Sanat</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-otanikgarden.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Botanik Bahçe</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-park-tivoli.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tivoli Parkı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-pogacarjevmeydan.png"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Pogacarjev Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-preseren-square.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Preseren Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-sehir.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Şehir Merkezi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-trubarjevacaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Trubarjeva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-uclukopru.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Üçlü Köprü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/Slovenia-Ljubljana-101.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ljubljana</p>
 													</div>
 												</div>
 											</div>
@@ -277,79 +277,79 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-banjelacic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Zagreb Banjelacic</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-cammuzesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Cam Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-Crkva-sv-Marka.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Marka Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-funicular.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Funikular</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-kamenita-vratataskapi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Taş Kapı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-muzejiluzija.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Luzija Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-tkalciceva.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tkalciva</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-tkalcicevacaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tkalciva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Zadar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Zadar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar-iz-adasi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İz Adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar-sehirkapisi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Şehir Kapısı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar-sur.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sur</p>
 													</div>
 												</div>
 											</div>
@@ -393,67 +393,67 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-bracada.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Split Brac adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-bracadasi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Brac adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-canlimuze.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Canlı Müze</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-diocletions-palace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Diocletions Sarayı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-marjanpanorama.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Maryan Panorama</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-marjantepesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Maryan Tepesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-marmantova.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Marmantova</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-ribljapijaca.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Balık Pazarı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-rivacaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Riva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/splitriva.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Riva</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/splitt.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Split</p>
 													</div>
 												</div>
 											</div>
@@ -497,85 +497,85 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-azizsaviourkilisesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Savior Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-akvaryum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Akvaryum</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-cankulesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Çan Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-denizmuzesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Deniz Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-etnografyamuzesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Etnografya Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-fransiskenmanastiri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Fransisken Manastırı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-ivangundulic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>İvan Gunduliç</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-kalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Dubrovnik Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-Lokrum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Lokrum</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-onofriocesmesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Onofrio Çeşmesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-onofriocesmesi2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Onofrio Çeşmesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-orlandosutunu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Orlando Sutünu</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-Rectors_palace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Rektör Sarayı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-resimleri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Dubrovnik</p>
 													</div>
 												</div>
 											</div>
@@ -617,43 +617,43 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-sponzapalace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Sponza Sarayı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-StBlaise-Church.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Blaise Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-straduncaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Stradun Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik_banje.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Banye</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik_GundulicevTrg001.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Gunliçev Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik_katedral.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Katedral</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik_mala-fontana-ostecena.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Ostecena Suyu</p>
 													</div>
 												</div>
 											</div>
