--- a/templates/bk-tour.html
+++ b/templates/bk-tour.html
@@ -561,49 +561,49 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-svetistefan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kilise</p>
+														<p>Svetistefan</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvaazizmeryemkilisesi.jpeg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/BUDVAeskikale.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Eski Kale</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvahadan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Hadan</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/Budvahisar.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Hisar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvakale.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvakalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvakutuphane.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kütüphane</p>
 													</div>
 												</div>
 												<div class="item">
@@ -627,25 +627,25 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/karadag.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Karadağ</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/KatolikStJohnKilisesiBudva.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Jon Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/kilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kilise</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/kilise2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kilise</p>
 													</div>
 												</div>
 												<div class="item">
@@ -687,97 +687,97 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor7.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kotor</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor8.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kotor</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/Kotor-AzizeMeryemKilisesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor-beskucapalata.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Beskuça Palata</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor-dedikoducesma.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Dedikodu Çesmesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotoraziztrifunkilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Aziz Trifun Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorhapishane.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Hapishane</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorkaleici.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorkalekapis.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Kale Kapısı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorlimani.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Kotor Limanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotormeydan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Kotor Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorpazari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Pazar</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorruskilisesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Rus Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorsenjonkilisesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Aziz Jon Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/old-clock-tower-Kotor.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/saatkulesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p> </p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 											</div>
@@ -826,55 +826,55 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-morace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Morace</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-starimoss.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Eski Köprü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-uzumbagi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Üzüm Bağları</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/Podgorica_milenyum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Milenyum</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgoricasaatkulesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgoricastaravaros.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Stara Varoş</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgoricastarimost.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Eski Köprü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgoritsataskopru.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Taş Köprü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podrorica-skalina.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Skalina</p>
 													</div>
 												</div>
 											</div>
