--- a/templates/bs-tour.html
+++ b/templates/bs-tour.html
@@ -448,31 +448,31 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/drina1.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Drina Nehri</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/guberkaynak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Güber Kaynağı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/mali-guber-ljekovite-vode-srebrenica.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Güber Ljekovite Suyu</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/srebrenica1.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Srebrenitsa</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/srebrenica2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Srebrenitsa</p>
 													</div>
 												</div>
 											</div>
@@ -514,85 +514,85 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-azizmeryem.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Meryem</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-belediye.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Novisad Belediyesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-gunbatimi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Gün batımı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-kale.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Novisad Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-meydan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Novisad Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-nehir-kenari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Nehir Kenarı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-ozgurlukkoprusu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Özgürlük Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-ozgurlukmeydani.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Özgürlük Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-saatkulesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-sencorckilisesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz George Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-sengeorge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz George</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisat-ozgurlukmeydani-1.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Özgürlük Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/petrovaradin-kalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Petrovaradin Kalesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/varadinkoprusu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Varadin Köprüsü</p>
 													</div>
 												</div>
 											</div>
@@ -634,115 +634,115 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/Belgrad3.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Belgrad</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgrad-25.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Belgrad</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/Belgrad-Gece1.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Belgrad</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgrad-kalemegdan-fortress.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale Megdan</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/Belgrad-Knez-Mihajlova.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Knez Mihaylova Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgrad-millimuze.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Milli Müze</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgrad-titomozole.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Tito'nun Mozolesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradadaciganlija.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Adaciganliya</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradazizmarko.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Marko</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradazizsavakilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Sava Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/Belgrade-NightLife.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Belgrad</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradeskigenelkurmay.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Eski Genel Kurmay</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/Belgradesunny.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Belgrad</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradkalemegdan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale Megdan</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradmillimelclis.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Milli Meclis</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/beograd-azizmarko.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Aziz Marko</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/beograd-hram-svetog-save.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Hram Svetog Save</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/beograd-kalemegdan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Kale Megdan</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/beograd_nikola_tesla_museum_outside.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p></p>
+														<p>Nikola Tesla Müzesi</p>
 													</div>
 												</div>
 											</div>
