--- a/templates/bk-tour.html
+++ b/templates/bk-tour.html
@@ -780,6 +780,30 @@
 														<p>Saat Kulesi</p>
 													</div>
 												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-bogomil.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Stolats Mogomil</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-kale.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Stolats Kale</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-stecak.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Stolats Stecak</p>
+													</div>
+												</div>
+												<div class="item">
+													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-tekkesi.jpg"%}" alt=""/>
+													<div class="carousel-caption">
+														<p>Stolats Kilisesi</p>
+													</div>
+												</div>
 											</div>
 
 											<div class="carousel-arrow">
