--- a/templates/footer.html
+++ b/templates/footer.html
@@ -21,7 +21,11 @@
 								<li><i class="fa fa-envelope"></i><font color="white">info@bright.tours</font></li>
 								<li><i class="fa fa-phone"></i><font color="white">+387-61-089517</font></li>
 								<li><i class="fa fa-globe"></i><font color="white">http://www.bright.tours</font></li>
-								<li><font color="white">Viber / Whatsapp / Kakao / Line:</font></li>
+								<li><img id="logo-footer"  src="{% static "img-temp/logo/viber.png"%}"  height="30" width="30"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/whatsapp.png"%}"  height="30" width="30"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/line.png"%}"  height="40" width="40"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/kakao.png"%}"  height="30" width="30"  alt=""></a>
+								</li>
 								<li><i class="fa fa-mobile"></i><font color="white">+387-61-089517</font></li>
 								<li>
 									<a href="/"><img id="logo-footer"  src="{% static "img/logo_beyaz.png"%}"  height="80" width="100"  alt=""></a>
