--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -234,6 +234,16 @@
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/NEWHOTEL.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3><a href="#">New Hotel</a></h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Saraybosna | Bosna Hersek</small>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
