--- a/templates/contact.html
+++ b/templates/contact.html
@@ -117,7 +117,11 @@
 						<li><a href="#"><i class="fa fa-envelope"></i>info@bright.tours</a></li>
 						<li><a href="#"><i class="fa fa-phone"></i>+387-61-089517</li>
 						<li><a href="#"><i class="fa fa-globe"></i>http://www.bright.tours</a></li>
-						<li>Viber / Whatsapp / Kakao / Line:</li>
+						<li><img id="logo-footer"  src="{% static "img-temp/logo/viber.png"%}"  height="30" width="30"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/whatsapp.png"%}"  height="30" width="30"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/line.png"%}"  height="40" width="40"  alt=""></a>
+									<img id="logo-footer"  src="{% static "img-temp/logo/kakao.png"%}"  height="30" width="30"  alt=""></a>
+								</li>
 						<li><i class="fa fa-mobile"></i>+387-61-089517</li>
 					</ul>
 
