--- a/templates/footer.html
+++ b/templates/footer.html
@@ -28,7 +28,7 @@
 								</li>
 								<li><i class="fa fa-mobile"></i><font color="white">+387-61-089517</font></li>
 								<li>
-									<a href="/"><img id="logo-footer"  src="{% static "img/logo_beyaz.png"%}"  height="80" width="100"  alt=""></a>
+									<a href="/"><img id="logo-footer"  src="{% static "img/dikey_logo_100x80pxl.png"%}"  height="80" width="100"  alt=""></a>
 
 								</li>
 							</ul>
