--- a/templates/balkantours.html
+++ b/templates/balkantours.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/yatay_logo_100x60pxl.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
