--- a/templates/hotels.html
+++ b/templates/hotels.html
@@ -12,7 +12,7 @@
 				<div class="col-md-4" >
 					<!-- Logo -->
 					<a class="logo" href="/">
-						<img src="{% static "img/logo_turkuaz.png"%}" height="60" width="100" alt="Logo">
+						<img src="{% static "img/yatay_logo_100x60pxl.png"%}" height="60" width="100" alt="Logo">
 					</a>
 					<!-- End Logo -->
 				</div>
@@ -104,7 +104,7 @@
 						<img class="img-responsive" src="{% static "img-temp/hotels/HOLLYWOOD.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Holywood</a></h3>
+						<h3>Hotel Holywood</h3>
 						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
@@ -114,7 +114,7 @@
 						<img class="img-responsive" src="{% static "img-temp/hotels/EUROPE.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Europe</a></h3>
+						<h3>Hotel Europe</h3>
 						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
@@ -124,7 +124,7 @@
 						<img class="img-responsive" src="{% static "img-temp/hotels/SARAJEVO.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Sarajevo</a></h3>
+						<h3>Hotel Sarajevo</h3>
 						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
@@ -142,7 +142,8 @@
 							<img class="img-responsive" src="{% static "img-temp/hotels/BM.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel BM</a></h3>
+							<h3>Hotel BM</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
@@ -151,20 +152,19 @@
 							<img class="img-responsive" src="{% static "img-temp/hotels/BRISTOL.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel Bristol</a></h3>
+							<h3>Hotel Bristol</h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 sm-margin-bottom-30">
 						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/TERME.jpg"%}" alt="">
+							<img class="img-responsive" src="{% static "img-temp/hotels/Hotel_Drim_Struga _4stars.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
+							<h3>Hotel Drim </h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-							<h3><a href="#">Terme Hotel</a></h3>
-
-							| Saraybosna | Bosna Hersek</small>
+							| Struga | Makedonya</small>
 						</div>
 					</div>
 				</div>
@@ -181,28 +181,28 @@
 						<img class="img-responsive" src="{% static "img-temp/hotels/CRYSTALHUNGARIA.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Crystal Hungaria</a></h3>
+						<h3>Hotel Crystal Hungaria</h3>
 						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
 				</div>
 				<div class="col-md-4 sm-margin-bottom-30">
 					<div class="news-v2-badge">
-						<img class="img-responsive" src="{% static "img-temp/hotels/hayat.jpg"%}" alt="">
+						<img class="img-responsive" src="{% static "img-temp/hotels/hotel_hercegovina_4stars_mostar.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Hayat</a></h3>
-						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></i>
-							| Saraybosna | Bosna Hersek</small>
+						<h3>Hotel Hercegovina</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Mostar | Bosna Hersek</small>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 sm-margin-bottom-30">
 					<div class="news-v2-badge">
-						<img class="img-responsive" src="{% static "img-temp/hotels/SEHER.jpg"%}" alt="">
+						<img class="img-responsive" src="{% static "img-temp/hotels/Hotel_Hills_Sarajevo_5stars.jpg"%}" alt="">
 					</div>
 					<div class="news-v2-desc bg-color-light">
-						<h3><a href="#">Hotel Şeher</a></h3>
-						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+						<h3>Hotel Hills</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 					</div>
 				</div>
@@ -216,12 +216,12 @@
 				<div class="row news-v2">
 					<div class="col-md-4 sm-margin-bottom-30">
 						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/MEJDAN.jpg"%}" alt="">
+							<img class="img-responsive" src="{% static "img-temp/hotels/Hotel_Princess_Bar_4stars.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel Mejdan</a></h3>
-							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-							| Saraybosna | Bosna Hersek</small>
+							<h3>Hotel Princess</h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Bar | Karadağ</small>
 						</div>
 					</div>
 					<div class="col-md-4 sm-margin-bottom-30">
@@ -229,19 +229,76 @@
 							<img class="img-responsive" src="{% static "img-temp/hotels/RADON.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">Hotel Radon</a></h3>
+							<h3>Hotel Radon</h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
 							| Saraybosna | Bosna Hersek</small>
 						</div>
 					</div>
 					<div class="col-md-4 sm-margin-bottom-30">
 						<div class="news-v2-badge">
-							<img class="img-responsive" src="{% static "img-temp/hotels/NEWHOTEL.jpg"%}" alt="">
+							<img class="img-responsive" src="{% static "img-temp/hotels/Hotel_Muslibegovic_Mostar.jpg"%}" alt="">
 						</div>
 						<div class="news-v2-desc">
-							<h3><a href="#">New Hotel</a></h3>
+							<h3>Hotel Muslibegovic</h3>
+							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Mostar | Bosna Hersek</small>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End News v2 Light -->
+
+		<!-- News v2 Gray -->
+		<div class="container content-md">
+
+			<div class="row news-v2">
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/Hotel_Ramada_Podgorica_4_stars.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3>Hotel Ramada</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Podgoritsa | Karadağ</small>
+					</div>
+				</div>
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/Kriva_Cuprija_Motel_Mostar_3stars.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3>Motel Kriva Cuprija</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Mostar | Bosna Hersek</small>
+					</div>
+				</div>
+				<div class="col-md-4 sm-margin-bottom-30">
+					<div class="news-v2-badge">
+						<img class="img-responsive" src="{% static "img-temp/hotels/Radissonblu_Ljubljana_5stars.jpg"%}" alt="">
+					</div>
+					<div class="news-v2-desc bg-color-light">
+						<h3>Hotel Radissonblu</h3>
+						<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+							| Ljubljana | Slovenya</small>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- End News v2 Gray -->
+
+		<!-- News v2 Light -->
+		<div class="bg-color-light">
+			<div class="container content-md">
+				<div class="row news-v2">
+					<div class="col-md-4 sm-margin-bottom-30">
+						<div class="news-v2-badge">
+							<img class="img-responsive" src="{% static "img-temp/hotels/Vila_Eden_Mostar_4stars.jpg"%}" alt="">
+						</div>
+						<div class="news-v2-desc">
+							<h3>Hotel Vila Eden</h3>
 							<small><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-							| Saraybosna | Bosna Hersek</small>
+							| Mostar | Bosna Hersek</small>
 						</div>
 					</div>
 				</div>
