--- a/templates/cities2.html
+++ b/templates/cities2.html
@@ -419,7 +419,7 @@ Struga, alan olarak 573 km2 ve deniz seviyesinden 698 metre yüksekliktedir. 50 
 					<hr class="margin-bottom-40">
 					<!--Blog Post-->
 					<div class="row blog blog-medium margin-bottom-40" id="kalkandelen">
-						<h2><a href="#"></a>KALKANDELEN (Tetovo)</h2>
+						<h2><a href="#"></a>KALKANDELEN (TETOVA)</h2>
 						<div class="col-md-5">
 							<img class="img-responsive" src="{% static "img-temp/cities/tabs400x250/kalkandelen.jpg"%}" alt="">
 						</div>
