--- a/templates/hk-tour.html
+++ b/templates/hk-tour.html
@@ -137,16 +137,16 @@
 							<div class="cbp_tmtime equal-height-column">
 								<span>1.Gün</span>
 								<span>Ljubljana</span>
-								<span>Pogacejev Meydanı</span>
+								<span>Pogacarjev Meydanı</span>
 								<span>Kunduracılar Köprüsü</span>
 								<span>Üçlü köprü</span>
 								<span>Kasap köprüsü</span>
 								<span>Ejderha köprüsü</span>
-								<span>Preseren köprüsü</span>
+								<span>Preseren Meydanı</span>
 								<span>Kongresni Meydanı</span>
 								<span>Truberjeva Caddesi</span>
 								<span>Ljublijana Kalesi</span>
-								<span>alk pazarı</span>
+								<span>Halk pazarı</span>
 								<span>Tivoli Bahçesi</span>
 								<span>Grafik Sanat Galerisi</span>
 								<span>Zagrep</span>
@@ -162,13 +162,13 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-buthersbridge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Ljubljana Buther Köprüsü</p>
+														<p>Kasap Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-Cobblers-Bridge.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Cobbler Köprüsü</p>
+														<p>Kunduracılar köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -192,7 +192,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-otanikgarden.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Botanik Bahçe</p>
+														<p>Botanik Bahçesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -216,7 +216,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/ljubljana-sehir.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Şehir Merkezi</p>
+														<p>Üçlü Köprü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -234,7 +234,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/ljubljana/slider900x600/Slovenia-Ljubljana-101.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Ljubljana</p>
+														<p>Ljubljanica Nehri</p>
 													</div>
 												</div>
 											</div>
@@ -277,7 +277,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-banjelacic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Zagreb Banjelacic</p>
+														<p>Ban Jelacic Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -307,31 +307,31 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-muzejiluzija.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Luzija Müzesi</p>
+														<p>İllüzyon Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-tkalciceva.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Tkalciva</p>
+														<p>Tkalciceva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zagreb/slider900x600/zagreb-tkalcicevacaddesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Tkalciva Caddesi</p>
+														<p>Tkalciceva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Zadar</p>
+														<p>Zadar Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Zadar</p>
+														<p>Zadar Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -349,7 +349,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/zadar/slider900x600/zadar-sur.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Sur</p>
+														<p>Zadar Eski Şehir</p>
 													</div>
 												</div>
 											</div>
@@ -372,7 +372,7 @@
 							<div class="cbp_tmtime equal-height-column">
 								<span>3. GÜN</span>
 								<span>Split</span>
-								<span>Diocletion's Palace</span>
+								<span>Diocletion's Sarayı</span>
 								<span>Live Museum</span>
 								<span>Marmantova Caddesi</span>
 								<span>Balık pazarı</span>
@@ -393,7 +393,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-bracada.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Split Brac adası</p>
+														<p>Brac Adası </p>
 													</div>
 												</div>
 												<div class="item">
@@ -429,7 +429,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/split-marmantova.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Marmantova</p>
+														<p>Marmantova Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -447,13 +447,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/splitriva.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Riva</p>
+														<p>Riva Caddesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/split/slider900x600/splitt.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Split</p>
+														<p>Split Kaleiçi</p>
 													</div>
 												</div>
 											</div>
@@ -545,7 +545,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-Lokrum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Lokrum</p>
+														<p>Lokrum Adası </p>
 													</div>
 												</div>
 												<div class="item">
@@ -575,7 +575,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik-resimleri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Dubrovnik</p>
+														<p>Dubrovnik Kaleiçi</p>
 													</div>
 												</div>
 											</div>
@@ -599,7 +599,7 @@
 								<span>5. GÜN</span>
 								<span>Fransisken Manastırı</span>
 								<span>Katedral</span>
-								<span>Aziz Saviour Kilisesi</span>
+								<span>Aziz Halaskar Kilisesi</span>
 								<span>Küçük Onofrio Çeşmesi</span>
 								<span>Orlando Sütunu</span>
 								<span>Gundulica Meydanı</span>
@@ -635,7 +635,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Atriyatik/dubrovnik/slider900x600/dubrovnik_banje.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Banye</p>
+														<p>Banye Sahili</p>
 													</div>
 												</div>
 												<div class="item">
