--- a/templates/homeen2.html
+++ b/templates/homeen2.html
@@ -142,18 +142,18 @@
 
 		<!-- Slide 6 -->
 		<div class="ms-slide">
-			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/croatia.jpg"%}" alt="ALT">
+			<img src="{% static "plugins/master-slider/masterslider/style/blank.gif"%}" data-src="{% static "img-temp/promo/hotelroom.jpg"%}" alt="ALT">
 			<div class="ms-layer ms-promo-travel-price hidden-xs" style="left: 15px; top: 182px; opacity: 1;" data-type="text" data-delay="10" data-effect="skewleft(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				<strong>425€</strong>'den başlayan fiyatlar
+				<strong>40€</strong>'den başlayan fiyatlar
 			</div>
 			<h3 class="ms-layer ms-promo-travel-place hidden-3xs" style="left: 11px; top: 256px;" data-type="text" data-delay="10" data-effect="skewright(50,340)" data-ease="easeOutExpo" data-duration="2200">
-				ADRİYATİK
+				OTEL REZERVASYONU
 			</h3>
 			<div class="ms-layer ms-promo-travel-description" style="left: 15px; top: 324px;" data-type="text" data-delay="30" data-effect="rotate3dbottom(100,0,0,70)" data-ease="easeOutExpo" data-duration="2300">
 				<p class="g-mb-20 hidden-sm hidden-xs">Unutamayacağınız bir tatil</p>
-				<p><a href="/balkan-tours/hk-tour" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">ADRİYATİK - </span>Ayrıntılar</a></p>
+				<p><a href="/hotels" class="btn-u btn-u-lg btn-u-red btn-u-upper"><span class="visible-3xs">OTEL REZERVASYONU - </span>Ayrıntılar</a></p>
 			</div>
-			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/croatia.jpg"%}" alt="thumb">
+			<img class="ms-thumb" src="{% static "img-temp/promo/thumbs/hotelroom.jpg"%}" alt="thumb">
 		</div>
 		<!-- End Slide 6 -->
 	</div>
@@ -371,7 +371,7 @@
 					<div class="popular-tours-item">
 						<div class="img-wrapper img-wrapper--shadow"><img src="{% static "img-temp/balkan-tours/thumbs/croatia.jpg"%}" alt="ALT" class="img-responsive"></div>
 						<div class="popular-tours-item-info">
-							<div class="popular-tours-item-info-price"><strong>425€</strong>'den başlayan fiyatlar</div>
+							<div class="popular-tours-item-info-price"><strong>25€</strong>'den başlayan fiyatlar</div>
 							<div class="popular-tours-item-info-inner">
 								<h3>Adriyatik</h3>
 								<p>4 gece 5 gün</p>
