--- a/templates/sarajevotour.html
+++ b/templates/sarajevotour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
