--- a/templates/smvt-tour.html
+++ b/templates/smvt-tour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -413,7 +413,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -483,7 +483,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
@@ -544,7 +544,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Roroviparki.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rarovi Parkı</p>
+														<p>Rorovi Parkı</p>
 													</div>
 												</div>
 												<div class="item">
