--- a/templates/tourbaseen.html
+++ b/templates/tourbaseen.html
@@ -1,7 +1,7 @@
 {% load cms_tags menu_tags sekizai_tags staticfiles%}
 <!DOCTYPE html>
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+<!--[if IE 9]> <html lang="tr" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="tr"> <!--<![endif]-->
 <head>
 	<title>{% block title %}This is my new project home page{% endblock title %}</title>
 
