--- a/templates/albania2-tour.html
+++ b/templates/albania2-tour.html
@@ -153,7 +153,7 @@
 							</div>
 							<i class="cbp_tmicon rounded-x hidden-xs"></i>
 							<div class="cbp_tmlabel equal-height-column">
-								<h2>KRUJA-İŞKODRA</h2>
+								<h2>AKÇAHİSAR-İŞKODRA</h2>
 								<div class="timeline-heading">
 										<div class="carousel slide carousel-v1" id="list1">
 											<div class="carousel-inner">
@@ -256,7 +256,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/iskodra/slider900x600/iskodra-kursunlu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kurşunlu</p>
+														<p>Kurşunlu Camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -358,7 +358,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/tiran/slider900x600/tiran-opera.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Tiran Opera</p>
+														<p>Opera Binası</p>
 													</div>
 												</div>
 												<div class="item">
@@ -463,7 +463,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/berat-kalekizilcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kale Kızıl Camii</p>
+														<p>Kızıl Camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -481,7 +481,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Arnavutluk/berat/slider900x600/beratsenmerikilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Senmeri Kilisesi</p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
