--- a/templates/bb-tour.html
+++ b/templates/bb-tour.html
@@ -152,7 +152,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-eminpasacamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Prizren Emin Paşa Camii</p>
+														<p>Emin Paşa camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -189,12 +189,6 @@
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-marasmahallesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>Maraş Mahallesi</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-meydan.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Prizren Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -308,7 +302,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-yasarpasa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaşar Paşa</p>
+														<p>Yaşar Paşa Camii </p>
 													</div>
 												</div>
 											</div>
@@ -363,7 +357,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-ciftehamam.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Üsküp Çifte Hamam</p>
+														<p>Çifte Hamam</p>
 													</div>
 												</div>
 												<div class="item">
@@ -387,7 +381,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-fatihcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Fatih Camii</p>
+														<p>Taş Köprü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -409,12 +403,6 @@
 													</div>
 												</div>
 												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskender.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>İskender</p>
-													</div>
-												</div>
-												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>İskender Heykeli</p>
@@ -423,7 +411,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Iskender Heykeli 2</p>
+														<p>Büyük İskender Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
@@ -513,13 +501,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
@@ -604,13 +592,13 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/manastir-resne/slider900x600/manastir-idadi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Manastır İdadi</p>
+														<p>Manastır İdadisi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/manastir-resne/slider900x600/manastir-idadiyeni.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Manastır İdadi</p>
+														<p>Manastır İdadisi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -928,13 +916,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-sveti.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kale içi</p>
+														<p>Aziz stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-svetistefan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Svetistefan</p>
+														<p>Sveti Stefan</p>
 													</div>
 												</div>
 												<div class="item">
@@ -952,7 +940,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvahadan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Hadan</p>
+														<p>Budva Hisarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -994,13 +982,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/kaleici.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kaleici</p>
+														<p>Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/karadag.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Karadağ</p>
+														<p>Sveti Stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1036,13 +1024,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor3.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor4.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1054,7 +1042,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kaleici-sokak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor Limani</p>
+														<p>Kotor Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1066,7 +1054,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor8.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1126,7 +1114,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorpazari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Pazar</p>
+														<p>Kotor Halk Pazarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1217,7 +1205,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -1287,7 +1275,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
@@ -1457,7 +1445,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
