--- a/templates/bk-tour.html
+++ b/templates/bk-tour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -413,7 +413,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -483,7 +483,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
@@ -555,13 +555,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-sveti.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kale içi</p>
+														<p>Aziz stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-svetistefan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Svetistefan</p>
+														<p>Sveti Stefan</p>
 													</div>
 												</div>
 												<div class="item">
@@ -579,7 +579,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvahadan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Hadan</p>
+														<p>Budva Hisarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -621,13 +621,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/kaleici.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kaleici</p>
+														<p>Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/karadag.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Karadağ</p>
+														<p>Sveti Stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
@@ -663,13 +663,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor3.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor4.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -681,7 +681,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kaleici-sokak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor Limani</p>
+														<p>Kotor Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -693,7 +693,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor8.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
@@ -753,7 +753,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorpazari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Pazar</p>
+														<p>Kotor Halk Pazarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -783,7 +783,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-bogomil.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Stolats Mogomil</p>
+														<p>Stolac Bogomil Mezarlığı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -801,7 +801,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-tekkesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Stolats Kilisesi</p>
+														<p>Stolats tekkesi</p>
 													</div>
 												</div>
 											</div>
@@ -850,7 +850,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-morace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Morace</p>
+														<p>Moraçe Kanyonu</p>
 													</div>
 												</div>
 												<div class="item">
@@ -868,7 +868,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/Podgorica_milenyum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Milenyum</p>
+														<p>Milenyum Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -898,7 +898,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podrorica-skalina.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Skalina</p>
+														<p>Skalina Köprüsü</p>
 													</div>
 												</div>
 											</div>
@@ -936,7 +936,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/ostrogkilisemisafirhanesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Ostrog Kilise Misafirhanesi</p>
+														<p>Ostrog Manastırı Misafirhanesi</p>
 													</div>
 												</div>
 												<div class="item">
