--- a/templates/bkkm-tour.html
+++ b/templates/bkkm-tour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -413,7 +413,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -483,7 +483,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
@@ -546,7 +546,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/Puente_Arslanagic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Puente Arslanagiç</p>
+														<p>Arslanagiç Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -564,7 +564,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-bogomil.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Stolats Mogomil</p>
+														<p>Stolac Bogomil Mezarlığı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -582,7 +582,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/trebinje/slider900x600/stolac-tekkesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Stolats Kilisesi</p>
+														<p>Stolats tekkesi</p>
 													</div>
 												</div>
 											</div>
@@ -638,13 +638,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-sveti.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kale içi</p>
+														<p>Aziz stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budva-svetistefan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Svetistefan</p>
+														<p>Sveti Stefan</p>
 													</div>
 												</div>
 												<div class="item">
@@ -662,7 +662,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/budvahadan.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Hadan</p>
+														<p>Budva Hisarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -704,13 +704,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/kaleici.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kaleici</p>
+														<p>Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/budva/slider900x600/karadag.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Karadağ</p>
+														<p>Sveti Stefan Adası</p>
 													</div>
 												</div>
 												<div class="item">
@@ -746,13 +746,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor3.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor4.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Saat Kulesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -764,7 +764,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kaleici-sokak.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor Limani</p>
+														<p>Kotor Kaleiçi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -776,7 +776,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotor8.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kotor</p>
+														<p>Aziz Trifun Katedrali</p>
 													</div>
 												</div>
 												<div class="item">
@@ -836,7 +836,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/kotor/slider900x600/kotorpazari.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Pazar</p>
+														<p>Kotor Halk Pazarı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -909,7 +909,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podgorica-morace.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Morace</p>
+														<p>Moraçe Kanyonu</p>
 													</div>
 												</div>
 												<div class="item">
@@ -927,7 +927,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/Podgorica_milenyum.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Milenyum</p>
+														<p>Milenyum Köprüsü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -957,7 +957,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/montenegro/podgoritsaostrog/slider900x600/podrorica-skalina.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Skalina</p>
+														<p>Skalina Köprüsü</p>
 													</div>
 												</div>
 											</div>
@@ -1005,7 +1005,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-Charshia_Jashar_Pasha.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaşar Paşa Çarşısı</p>
+														<p>Yaşar Paşa Camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1041,7 +1041,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-rahibeteresa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1065,14 +1065,14 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-yasarpasa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaşar Paşa</p>
+														<p>Yaşar Paşa Camii </p>
 													</div>
 												</div>
 
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-eminpasacamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Prizren Emin Paşa Camii</p>
+														<p>Emin Paşa camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1109,12 +1109,6 @@
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-marasmahallesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>Maraş Mahallesi</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-meydan.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Prizren Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1205,7 +1199,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-ciftehamam.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Üsküp Çifte Hamam</p>
+														<p>Çifte Hamam</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1229,7 +1223,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-fatihcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Fatih Camii</p>
+														<p>Taş Köprü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1251,12 +1245,6 @@
 													</div>
 												</div>
 												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskender.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>İskender</p>
-													</div>
-												</div>
-												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>İskender Heykeli</p>
@@ -1265,7 +1253,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Iskender Heykeli 2</p>
+														<p>Büyük İskender Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1307,13 +1295,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-kuyumcu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kuyumcular</p>
+														<p>Kuyumcular Çarşısı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-makedonya-taki.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Makedonya Takisi</p>
+														<p>Zafer Takı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -1355,13 +1343,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
