--- a/templates/bs-tour.html
+++ b/templates/bs-tour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -405,7 +405,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/visegrad-gorajde/slider900x600/Roroviparki.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rarovi Parkı</p>
+														<p>Rorovi Parkı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -466,13 +466,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/srebrenica1.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Srebrenitsa</p>
+														<p>Srebrenitse Şehitliği</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/srebrenica/slider900x600/srebrenica2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Srebrenitsa</p>
+														<p>Srebrenitse Şehitliği</p>
 													</div>
 												</div>
 											</div>
@@ -498,7 +498,7 @@
 								<span>Savaş Müzesi</span>
 								<span>Varadin Köprüsü</span>
 								<span>Tuna Nehri</span>
-								<span>St.George Kilisesi</span>
+								<span>Aziz Geore Kilisesi</span>
 								<span>Novisad Belediye Binası</span>
 								<span>Belgrad</span>
 								<span>Kalemegdan</span>
@@ -514,7 +514,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/novisad/slider900x600/novisad-azizmeryem.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Aziz Meryem</p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -700,7 +700,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/belgradeskigenelkurmay.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Eski Genel Kurmay</p>
+														<p>Eski Genelkurmay Başkanlığı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -730,7 +730,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Sirbistan/belgrad/slider900x600/beograd-hram-svetog-save.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Hram Svetog Save</p>
+														<p>Aziz Sava Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
