--- a/templates/km-tour.html
+++ b/templates/km-tour.html
@@ -167,7 +167,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-Charshia_Jashar_Pasha.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaşar Paşa Çarşısı</p>
+														<p>Yaşar Paşa Camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -227,14 +227,14 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/pristine/slider900x600/pristine-yasarpasa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaşar Paşa</p>
+														<p>Yaşar Paşa Camii </p>
 													</div>
 												</div>
 
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-eminpasacamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Prizren Emin Paşa Camii</p>
+														<p>Emin Paşa camii</p>
 													</div>
 												</div>
 												<div class="item">
@@ -271,12 +271,6 @@
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-marasmahallesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>Maraş Mahallesi</p>
-													</div>
-												</div>
-												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Kosova/prizren/slider900x600/prizren-meydan.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>Prizren Meydanı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -373,7 +367,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-ciftehamam.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Üsküp Çifte Hamam</p>
+														<p>Çifte Hamam</p>
 													</div>
 												</div>
 												<div class="item">
@@ -397,7 +391,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-fatihcamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Fatih Camii</p>
+														<p>Taş Köprü</p>
 													</div>
 												</div>
 												<div class="item">
@@ -419,12 +413,6 @@
 													</div>
 												</div>
 												<div class="item">
-													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskender.jpg"%}" alt=""/>
-													<div class="carousel-caption">
-														<p>İskender</p>
-													</div>
-												</div>
-												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli.jpg"%}" alt=""/>
 													<div class="carousel-caption">
 														<p>İskender Heykeli</p>
@@ -433,7 +421,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-iskenderheykeli2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Iskender Heykeli 2</p>
+														<p>Büyük İskender Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
@@ -475,13 +463,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-kuyumcu.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kuyumcular</p>
+														<p>Kuyumcular Çarşısı</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-makedonya-taki.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Makedonya Takisi</p>
+														<p>Zafer Takı</p>
 													</div>
 												</div>
 												<div class="item">
@@ -523,13 +511,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/uskup/slider900x600/uskup-rahibeteresa2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Rahibe Teresa</p>
+														<p>Rahibe Teresa Heykeli</p>
 													</div>
 												</div>
 												<div class="item">
@@ -618,13 +606,13 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/kalkandelen/slider900x600/kalkandelen-alacacamii.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Kalkandelen Ala Camii</p>
+														<p>Alaca Camii</p>
 													</div>
 												</div>
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/kalkandelen/slider900x600/kalkandelen-harabatibabatekkesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Harabi Baba Tekkesi</p>
+														<p>Harabati Baba Tekkesi</p>
 													</div>
 												</div>
 												<div class="item ">
@@ -636,13 +624,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/manastir-resne/slider900x600/manastir-idadi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Manastır İdadi</p>
+														<p>Manastır İdadisi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/manastir-resne/slider900x600/manastir-idadiyeni.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>İdadi</p>
+														<p>Atatürk Müzesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -751,13 +739,13 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/ohri/slider900x600/ohri-azizkiril.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Aziz Kiril</p>
+														<p>Aziz Kiril Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/ohri/slider900x600/ohri-azizmeryem.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Aziz Meryem</p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item">
@@ -805,7 +793,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/balkan-tours/Makedonya/ohri/slider900x600/ohri-samuelkalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Samuel Kalesi</p>
+														<p>Ohri Kalesi</p>
 													</div>
 												</div>
 											</div>
