--- a/templates/rentacar.html
+++ b/templates/rentacar.html
@@ -157,7 +157,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">FORD FIESTA (Otomatik vites)</a></h3>
-									<small>2009 | KIRMIZI | 1.2 petrol</small>
+									<small>2009 | KIRMIZI | 1.2 benzin</small>
 								</div>
 							</div>
 						</div>
@@ -174,7 +174,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">VOLKSWAGEN	GOLF</a></h3>
-									<small>2012 | GÜMÜŞ | 1.2 petrol</small>
+									<small>2012 | GÜMÜŞ | 1.2 benzin</small>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
@@ -204,7 +204,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">SEAT ALTEA XL (Otomatik vites)</a></h3>
-									<small>	2010 | SİYAH | 1.8 petrol</small>
+									<small>	2010 | SİYAH | 1.8 benzin</small>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
@@ -234,7 +234,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">MAZDA	5 VIP</a></h3>
-									<small>2011	| GÜMÜŞ | 2.0 petrol</small>
+									<small>2011	| GÜMÜŞ | 2.0 benzin</small>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
@@ -247,7 +247,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">MAZDA 5</a></h3>
-									<small>2012	| SİYAH | 2.0 petrol</small>
+									<small>2012	| SİYAH | 2.0 benzin</small>
 								</div>
 							</div>
 						</div>
@@ -264,7 +264,7 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">FORD FIESTA</a></h3>
-									<small>2011 | SİYAH	| 1.2 petrol</small>
+									<small>2011 | SİYAH	| 1.2 benzin</small>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
@@ -294,20 +294,20 @@
 								</div>
 								<div class="news-v2-desc bg-color-light">
 									<h3><a href="#">CHEVROLET	AVEO	</a></h3>
-									<small>2010 | BEYAZ | 1.2 petrol</small>
+									<small>2010 | BEYAZ | 1.2 benzin</small>
 								</div>
 							</div>
 							<div class="col-md-4 sm-margin-bottom-30">
 								<div class="news-v2-badge">
-									<img class="img-responsive" src="{% static "img-temp/cars/thumbs/aveo.jpg"%}" alt="">
+									<img class="img-responsive" src="{% static "img-temp/cars/thumbs/touran2008.jpg"%}" alt="">
 									<p>
 										<small>Günlük</small>
 										<span>30€</span>
 									</p>
 								</div>
 								<div class="news-v2-desc bg-color-light">
-									<h3><a href="#">CHEVROLET AVEO</a></h3>
-									<small>2010 | BEYAZ | 1.2 petrol</small>
+									<h3><a href="#">VOLKSWAGEN TOURAN</a></h3>
+									<small>2008 | BLACK | 1.9 dizel</small>
 								</div>
 							</div>
 						</div>
@@ -316,106 +316,10 @@
 				</div>
 				<!-- End Left Sidebar -->
 
-				<!-- Right Sidebar -->
-				<div class="col-md-3">
+				<!-- Begin Sidebar Menu -->
+				{% include "rightalternativelist.html" %}
+				<!-- End Sidebar Menu -->
 
-					<!-- Activities -->
-					<div class="posts margin-bottom-40">
-						<div class="headline headline-md"><h2>Alternatif Turlar</h2></div>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/atbinicilik.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>At Binicilik</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/balikcilik.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Balıkçılık</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/buzpateni.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Buz Pateni</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/cave.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Mağara Gezileri</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/dagoteli.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Dağ Oteli</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/esekciftligi.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Eşek Çifliği</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/kamping.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Kamp</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/kaplica.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Termal Tesisler</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/kayak.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Kayak</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/piramit.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Piramitler</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/rafting.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Rafting</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/soskoyu.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>SOS Köyü</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/titonunsiginagi.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Tito'nun Sığınağı</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/treking.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Treking</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-						<dl class="dl-horizontal">
-							<dt><a href="/alternatives"><img src="{% static "img-temp/alternatives/thumbs/yamacparasutu.jpg"%}" alt="" /></a></dt>
-							<dd>
-								<p><a href="/alternatives"><b>Yamaç Paraşütü</b><br>Kişi başı 20€</a></p>
-							</dd>
-						</dl>
-					</div>
-					<!-- End Activities -->
-				</div>
-				<!-- End Right Sidebar -->
 			</div><!--/row-->
 		</div><!--/container-->
 		<!--=== End Content Part ===-->
