--- a/templates/smjs-tour.html
+++ b/templates/smjs-tour.html
@@ -285,7 +285,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -413,7 +413,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -483,7 +483,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
@@ -524,7 +524,7 @@
 												<div class="item active">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/jajce/slider900x600/Plivskoselalesi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Plivsko Şelalesi</p>
+														<p>Pliva Şelalesi</p>
 													</div>
 												</div>
 												<div class="item ">
@@ -542,19 +542,19 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/jajce/slider900x600/eskikilise.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Eski Kilise</p>
+														<p>Azize Meryem Kilisesi</p>
 													</div>
 												</div>
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/jajce/slider900x600/asimagakonagi.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Asımağa Konağı</p>
+														<p>Asım Ağa Konağı</p>
 													</div>
 												</div>
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/jajce/slider900x600/Asimagakonagi2.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Asımağa Konağı</p>
+														<p>Asım Ağa Konağı</p>
 													</div>
 												</div>
 											</div>
