--- a/templates/smts-tour.html
+++ b/templates/smts-tour.html
@@ -284,7 +284,7 @@
 												<div class="item">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/sarajevo/slider900x600/miljackanehri.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Miljaçka Nehri</p>
+														<p>Miljacka Nehri</p>
 													</div>
 												</div>
 												<div class="item">
@@ -412,7 +412,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Konjic.jpg"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Konjits</p>
+														<p>Konjic Köprüsü</p>
 													</div>
 												</div>
 
@@ -482,7 +482,7 @@
 												<div class="item ">
 													<img class="img-responsive" src="{% static "img-temp/bosnia-tours/mostar/slider900x600/Yablanitsayikikkopru.JPG"%}" alt=""/>
 													<div class="carousel-caption">
-														<p>Yaplanitsa Yıkık Köprü</p>
+														<p>Yablanitsa Yıkık Köprü</p>
 													</div>
 												</div>
 
